[tool.poetry]
name = "custom-game-area"
version = "0.1.0"
description = ""
authors = ["reconman <reconman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pillow = "^9.5.0"
pygithub = "^1.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
